CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.13

	- The scheduler put the wrong timezone offset in the log
	  files (e.g. +0500 instead of -0500 for EST...)
	- The scheduler did not ignore trailing whitespace in
	  *.convs files.
	- The scheduler now forces all processes to exit (kill
	  -9) when it is stopped.  This prevents parallel and
	  USB devices from running in the background after cupsd
	  goes away.
	- The cupsParseOptions() function didn't skip trailing
	  whitespace after quoted values.
	- More changes to support CUPS on OS/2.
	- Added Simplified Chinese message catalog.
	- Added PAM support for IRIX.
	- The cupsGetPPD() function didn't remove the @server
	  portion of the printer name, and since it would
	  connect immediately to the remote server instead of
	  the local server, the printer would not be found.
	- Classification and page labels were not rotated to
	  match the page orientation.
	- Now set the TCP "no delay" option on network
	  connections to improve performance/response time.
	- Improved the IRIX printing tools support with patches
	  from Andrea Suatoni.
	- Added a new PrintcapGUI directive to specify the GUI
	  option panel program to use for the IRIX printing
	  tools support.
	- The cupsGetDests() function did not check to see if a
	  user-defined default printer (set via lpoptions) still
	  existed.
	- The pstops filter no longer assumes that the default
	  dictionary is writable when doing N-up processing.
	- The pstops filter now supports printing N-up with the
	  page-set option.
	- The imagetoraster filter now supports direct printing
	  of CMYK image data without conversion/correction.
	- The IPP backend now reports printer state/error
	  conditions when possible (toner low, media empty,
	  etc.)
	- The lpstat command now supports the (undocumented)
	  IRIX -l option ("-lprintername") for a compact job
	  listing for a printer.
	- The lpstat command now includes printer date/time