@@ -1,5 +1,5 @@
 /*
- * "$Id: language.h,v 1.18.2.3 2002/01/27 21:20:29 mike Exp $"
+ * "$Id: language.h,v 1.18.2.4 2002/01/29 20:28:02 mike Exp $"
  *
  *   Multi-language support for the Common UNIX Printing System (CUPS).
  *
@@ -181,7 +181,9 @@ typedef enum			/**** Language Encodings ****/
   CUPS_WINDOWS_1255,
   CUPS_WINDOWS_1256,
   CUPS_WINDOWS_1257,
-  CUPS_WINDOWS_1258
+  CUPS_WINDOWS_1258,
+  CUPS_KOI8_R,
+  CUPS_KOI8_U,
 } cups_encoding_t;
 
 typedef struct cups_lang_str	/**** Language Cache Structure ****/
@@ -218,5 +220,5 @@ extern cups_lang_t	*cupsLangGet(const char *language);
 #endif /* !_CUPS_LANGUAGE_H_ */
 
 /*
- * End of "$Id: language.h,v 1.18.2.3 2002/01/27 21:20:29 mike Exp $".
+ * End of "$Id: language.h,v 1.18.2.4 2002/01/29 20:28:02 mike Exp $".
  */
