@@ -30,7 +30,8 @@ charset utf8
 0100 01FF ltor single Courier Courier-Bold Courier-Italic Courier-Bold-Italic
 0200 02FF ltor single Courier Courier-Bold Courier-Italic Courier-Bold-Italic
 0300 03FF ltor single Symbol
-0400 04FF ltor single Courier-Cyrillic
+0400 04FF ltor single Courier Courier-Bold Courier-Italic Courier-Bold-Italic
+0500 05FF rtol single Courier
 1E00 1EFF ltor single Courier Courier-Bold Courier-Italic Courier-Bold-Italic
 2000 20FF ltor single Courier Courier-Bold Courier-Italic Courier-Bold-Italic
 2100 21FF ltor single Courier Courier-Bold Courier-Italic Courier-Bold-Italic
