@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.c,v 1.93.2.11 2002/01/29 03:10:22 mike Exp $"
+ * "$Id: printers.c,v 1.93.2.12 2002/01/29 20:28:08 mike Exp $"
  *
  *   Printer routines for the Common UNIX Printing System (CUPS).
  *
@@ -922,7 +922,9 @@ SetPrinterAttrs(printer_t *p)		/* I - Printer to setup */
 		  "windows-1255",
 		  "windows-1256",
 		  "windows-1257",
-		  "windows-1258"
+		  "windows-1258",
+		  "koi8-r",
+		  "koi8-u",
 		};
   int		num_finishings;
   ipp_finish_t	finishings[5];
@@ -2011,5 +2013,5 @@ write_irix_state(printer_t *p)	/* I - Printer to update */
 
 
 /*
- * End of "$Id: printers.c,v 1.93.2.11 2002/01/29 03:10:22 mike Exp $".
+ * End of "$Id: printers.c,v 1.93.2.12 2002/01/29 20:28:08 mike Exp $".
  */
